--- a/resume.html
+++ b/resume.html
@@ -146,6 +146,11 @@
       <h2 class="italic resume-heading">Experience</h2>
       <div class="text-block-wrapper resume-group">
         <div class="resume-group">
+          <div class="detail">April 2024 – CURRENT</div>
+          <div class="body-regular"><strong>Freelance UX/UI and Graphic Designer</strong> @ <a href="https://21cslacenter.berkeley.edu/" target="_blank" class="hyperlink">UC Berkeley</a>, <a href="https://www.wideeye.co/" target="_blank" class="hyperlink">WideEye Creative</a>
+          </div>
+        </div>
+        <div class="resume-group">
           <div class="detail">september 2022 – April 2024</div>
           <div class="body-regular"><strong>Environmental Graphic Designer</strong> @ <a href="https://ghdp.com/" target="_blank" class="hyperlink">GHD Partners</a>
           </div>
