--- a/projects/the-karman-project.html
+++ b/projects/the-karman-project.html
@@ -153,7 +153,7 @@
           <div class="detail">webflow development</div>
         </div>
       </div>
-      <p class="body-regular">Radish Lab partnered with The Karman Project to design a visual identity and website that feels fresh and innovative. In my role as UX/UI designer and developer, I worked with my team to create a new visual identity and launch a website within a two-week timeframe. <a href="https://www.karmanproject.org/" target="_blank" class="hyperlink">Visit the live site here.</a>
+      <p class="body-regular">Radish Lab partnered with The Karman Project to design a visual identity and website that feels fresh and innovative. In my role as UX/UI designer and developer, I worked with my team to create a new visual identity and launch a website within a two-week timeframe. 
       </p>
       <div class="project-detail-wrapper">
         <div>
