--- a/project/archive.html
+++ b/project/archive.html
@@ -1,4 +1,4 @@
-<!DOCTYPE html><!--  This site was created in Webflow. https://webflow.com  --><!--  Last Published: Tue May 13 2025 13:11:38 GMT+0000 (Coordinated Universal Time)  -->
+<!DOCTYPE html><!--  This site was created in Webflow. https://webflow.com  --><!--  Last Published: Tue May 13 2025 14:10:34 GMT+0000 (Coordinated Universal Time)  -->
 <html data-wf-page="62bcbb0a0d689483e4ada9c1" data-wf-site="61d38d1ee8e6e2da8cbf9901">
 <head>
   <meta charset="utf-8">
@@ -137,7 +137,7 @@
       </div>
       <div class="menu-heading-1 home">
         <div class="body-small">
-          <a href="../archive.html"><strong class="hyperlink about">About</strong></a>
+          <a href="../about.html"><strong class="hyperlink about">About</strong></a>
         </div>
         <div class="body-small">
           <a href="../resume.html"><strong class="hyperlink resume">Resume</strong></a>
