--- a/index.html
+++ b/index.html
@@ -1,4 +1,4 @@
-<!DOCTYPE html><!--  This site was created in Webflow. https://webflow.com  --><!--  Last Published: Tue May 13 2025 14:10:34 GMT+0000 (Coordinated Universal Time)  -->
+<!DOCTYPE html><!--  This site was created in Webflow. https://webflow.com  --><!--  Last Published: Thu May 15 2025 03:32:08 GMT+0000 (Coordinated Universal Time)  -->
 <html data-wf-page="61d38d1ee8e6e28652bf9902" data-wf-site="61d38d1ee8e6e2da8cbf9901">
 <head>
   <meta charset="utf-8">
@@ -45,8 +45,8 @@
             <div class="detail">Product design</div>
           </div>
         </div>
-        <h3>Designing a Flexible Editor for a Web Platform</h3>
-        <div>I worked with a team at a public university to introduce new features to their Learning Hub, an interactive web-based application tool where teachers and educational admins can create and share resources.</div>
+        <h3>Designing a Flexible Content Editor for an Internal Tool</h3>
+        <div>I worked with a team at a public university to introduce new features to their Learning Hub, an interactive React-based platform where teachers and educational admins  create and share resources.</div>
       </div>
     </a>
     <div class="hr"></div>
@@ -83,15 +83,15 @@
   </section>
   <div id="w-node-b6a7ab0e-34b4-7f7f-8d89-6cf89498a055-52bf9902" class="w-layout-layout work-grid filter wf-layout-layout">
     <div class="w-layout-cell cell">
-      <a href="project/barbershop-books.html" class="link-block w-inline-block"><img src="images/Barbershop-Books.png" loading="lazy" sizes="(max-width: 1776px) 100vw, 1776px" srcset="images/Barbershop-Books-p-500.png 500w, images/Barbershop-Books-p-800.png 800w, images/Barbershop-Books-p-1080.png 1080w, images/Barbershop-Books-p-1600.png 1600w, images/Barbershop-Books.png 1776w" alt="" class="home-img">
-        <h4 class="project-grid-h1">Visual Identity and Website for Inspiring Kids to Read for Fun</h4>
-        <div class="detail">barbershop books</div>
+      <a href="project/ghd-partners-website.html" class="link-block w-inline-block"><img src="images/ghd-grid.gif" loading="lazy" alt="" class="home-img">
+        <h4 class="project-grid-h1">Design Studio Website</h4>
+        <div class="detail">ghd partners</div>
       </a>
     </div>
     <div class="w-layout-cell cell">
-      <a href="project/sky-sport-pickleball.html" class="link-block w-inline-block"><img src="images/Skysport.png" loading="lazy" sizes="(max-width: 1776px) 100vw, 1776px" srcset="images/Skysport-p-500.png 500w, images/Skysport-p-800.png 800w, images/Skysport-p-1080.png 1080w, images/Skysport-p-1600.png 1600w, images/Skysport.png 1776w" alt="" class="home-img">
-        <h4 class="project-grid-h1">Logo and Brand for a Pickleball Startup</h4>
-        <div class="detail">skysports</div>
+      <a href="project/barbershop-books.html" class="link-block w-inline-block"><img src="images/Barbershop-Books.png" loading="lazy" sizes="(max-width: 1776px) 100vw, 1776px" srcset="images/Barbershop-Books-p-500.png 500w, images/Barbershop-Books-p-800.png 800w, images/Barbershop-Books-p-1080.png 1080w, images/Barbershop-Books-p-1600.png 1600w, images/Barbershop-Books.png 1776w" alt="" class="home-img">
+        <h4 class="project-grid-h1">Visual Identity and Website for Inspiring Kids to Read for Fun</h4>
+        <div class="detail">barbershop books</div>
       </a>
     </div>
     <div class="w-layout-cell cell">
@@ -101,9 +101,9 @@
       </a>
     </div>
     <div class="w-layout-cell cell">
-      <a href="project/ghd-partners-website.html" class="link-block w-inline-block"><img src="images/ghd-grid.gif" loading="lazy" alt="" class="home-img">
-        <h4 class="project-grid-h1">Design Studio Website</h4>
-        <div class="detail">ghd partners</div>
+      <a href="project/sky-sport-pickleball.html" class="link-block w-inline-block"><img src="images/Skysport.png" loading="lazy" sizes="(max-width: 1776px) 100vw, 1776px" srcset="images/Skysport-p-500.png 500w, images/Skysport-p-800.png 800w, images/Skysport-p-1080.png 1080w, images/Skysport-p-1600.png 1600w, images/Skysport.png 1776w" alt="" class="home-img">
+        <h4 class="project-grid-h1">Logo and Brand for a Pickleball Startup</h4>
+        <div class="detail">skysports</div>
       </a>
     </div>
     <div class="w-layout-cell cell">
