--- a/resume.html
+++ b/resume.html
@@ -1,4 +1,4 @@
-<!DOCTYPE html><!--  This site was created in Webflow. https://webflow.com  --><!--  Last Published: Tue May 13 2025 14:10:34 GMT+0000 (Coordinated Universal Time)  -->
+<!DOCTYPE html><!--  This site was created in Webflow. https://webflow.com  --><!--  Last Published: Thu May 15 2025 03:32:08 GMT+0000 (Coordinated Universal Time)  -->
 <html data-wf-page="61d3d7206a18b79eb9bf0085" data-wf-site="61d38d1ee8e6e2da8cbf9901">
 <head>
   <meta charset="utf-8">
@@ -150,7 +150,7 @@
       <div class="text-block-wrapper resume-group">
         <div class="resume-group">
           <div class="detail">may 2024 – current</div>
-          <div class="body-regular"><strong>Freelance UX/UI and Visual Designer</strong> @ <a href="https://21cslacenter.berkeley.edu/" target="_blank" class="hyperlink">UC Berkeley</a>, <a href="https://www.wideeye.co/" target="_blank" class="hyperlink">WideEye Creative</a>
+          <div class="body-regular"><strong>Freelance Product, UX/UI &amp; Visual Designer</strong> @ <a href="https://21cslacenter.berkeley.edu/" target="_blank" class="hyperlink">UC Berkeley</a>, <a href="https://www.wideeye.co/" target="_blank" class="hyperlink">WideEye Creative</a>
           </div>
         </div>
         <div class="resume-group">
@@ -160,7 +160,7 @@
         </div>
         <div class="resume-group">
           <div class="detail">july 2020 – August 2022</div>
-          <div class="body-regular"><strong>Product, UX/UI Designer</strong> @ <a href="https://radishlab.com/" target="_blank" class="hyperlink">Radish Lab</a>
+          <div class="body-regular"><strong>UX/UI &amp; Visual Designer</strong> @ <a href="https://radishlab.com/" target="_blank" class="hyperlink">Radish Lab</a>
           </div>
         </div>
         <div class="resume-group">
