--- a/detail_projects.html
+++ b/detail_projects.html
@@ -1,4 +1,4 @@
-<!DOCTYPE html><!--  This site was created in Webflow. https://webflow.com  --><!--  Last Published: Thu May 15 2025 03:32:08 GMT+0000 (Coordinated Universal Time)  -->
+<!DOCTYPE html><!--  This site was created in Webflow. https://webflow.com  --><!--  Last Published: Tue May 20 2025 22:12:52 GMT+0000 (Coordinated Universal Time)  -->
 <html data-wf-page="681134260a8e9402a04733f0" data-wf-site="61d38d1ee8e6e2da8cbf9901">
 <head>
   <meta charset="utf-8">
@@ -44,6 +44,10 @@
         <a data-w-id="3816079e-a4a8-0d21-c7f2-19e337df5b18" href="project/barbershop-books.html" class="menu-item w-inline-block">
           <div class="oval-wrapper no-hover"></div>
           <div class="menu-item-project-title">Barbershop Books </div>
+        </a>
+        <a href="project/clearbridge-stewardship-report-microsite.html" class="menu-item w-inline-block">
+          <div class="oval-wrapper no-hover"></div>
+          <div class="menu-item-project-title">Clearbridge Report</div>
         </a>
         <a data-w-id="19613e81-38cd-b494-68fa-e168c27d5962" href="project/equimundo.html" class="menu-item w-inline-block">
           <div class="oval-wrapper no-hover"></div>
