--- a/filter/website-projects.html
+++ b/filter/website-projects.html
@@ -1,4 +1,4 @@
-<!DOCTYPE html><!--  This site was created in Webflow. https://webflow.com  --><!--  Last Published: Thu May 15 2025 03:32:08 GMT+0000 (Coordinated Universal Time)  -->
+<!DOCTYPE html><!--  This site was created in Webflow. https://webflow.com  --><!--  Last Published: Tue May 20 2025 22:12:52 GMT+0000 (Coordinated Universal Time)  -->
 <html data-wf-page="68113b075801edc7bfc105b8" data-wf-site="61d38d1ee8e6e2da8cbf9901">
 <head>
   <meta charset="utf-8">
@@ -96,9 +96,15 @@
   </section>
   <div id="w-node-_09131c91-fe78-3f83-bb85-916bd45144b3-bfc105b8" class="w-layout-layout work-grid filter wf-layout-layout">
     <div class="w-layout-cell cell">
-      <a href="../project/wings.html" class="link-block w-inline-block"><img src="../images/wings.gif" loading="lazy" width="657" alt="" class="home-img">
-        <h4 class="project-grid-h1">Supporting Survivors in Navigating Healing Using Trauma-Informed Design</h4>
-        <div class="detail">wings</div>
+      <a href="../project/clearbridge-stewardship-report-microsite.html" class="link-block w-inline-block"><img loading="lazy" src="../images/clearbridge-thumbnail.gif" alt="" class="home-img">
+        <h4 class="project-grid-h1">Stewardship 2023 Annual Report</h4>
+        <div class="detail">Clearbridge investments</div>
+      </a>
+    </div>
+    <div class="w-layout-cell cell">
+      <a href="../project/ghd-partners-website.html" class="link-block w-inline-block"><img src="../images/ghd-grid.gif" loading="lazy" alt="" class="home-img">
+        <h4 class="project-grid-h1">Design Studio Website</h4>
+        <div class="detail">ghd partners</div>
       </a>
     </div>
     <div class="w-layout-cell cell">
@@ -108,9 +114,9 @@
       </a>
     </div>
     <div class="w-layout-cell cell">
-      <a href="../project/ghd-partners-website.html" class="link-block w-inline-block"><img src="../images/ghd-grid.gif" loading="lazy" alt="" class="home-img">
-        <h4 class="project-grid-h1">Design Studio Website</h4>
-        <div class="detail">ghd partners</div>
+      <a href="../project/wings.html" class="link-block w-inline-block"><img src="../images/wings.gif" loading="lazy" width="657" alt="" class="home-img">
+        <h4 class="project-grid-h1">Supporting Survivors in Navigating Healing Using Trauma-Informed Design</h4>
+        <div class="detail">wings</div>
       </a>
     </div>
     <div class="w-layout-cell cell">
@@ -123,12 +129,6 @@
       <a href="../project/equimundo.html" class="link-block w-inline-block"><img src="../images/Equimundo.gif" loading="lazy" alt="" class="home-img">
         <h4 class="project-grid-h1">Interactive Data Visualizations Featuring Gender Equality Research</h4>
         <div class="detail">equimundo</div>
-      </a>
-    </div>
-    <div class="w-layout-cell cell">
-      <a href="../archived/the-karman-project.html" class="link-block w-inline-block"><img sizes="(max-width: 1776px) 100vw, 1776px" srcset="../images/Karman-p-500.png 500w, ../images/Karman-p-800.png 800w, ../images/Karman-p-1080.png 1080w, ../images/Karman-p-1600.png 1600w, ../images/Karman.png 1776w" alt="" src="../images/Karman.png" loading="lazy" class="home-img">
-        <h4 class="project-grid-h1">Logo, Brand and Microsite</h4>
-        <div class="detail">Karman project</div>
       </a>
     </div>
   </div>
