--- a/index.html
+++ b/index.html
@@ -1,4 +1,4 @@
-<!DOCTYPE html><!--  This site was created in Webflow. https://webflow.com  --><!--  Last Published: Thu May 15 2025 03:32:08 GMT+0000 (Coordinated Universal Time)  -->
+<!DOCTYPE html><!--  This site was created in Webflow. https://webflow.com  --><!--  Last Published: Tue May 20 2025 22:12:52 GMT+0000 (Coordinated Universal Time)  -->
 <html data-wf-page="61d38d1ee8e6e28652bf9902" data-wf-site="61d38d1ee8e6e2da8cbf9901">
 <head>
   <meta charset="utf-8">
@@ -83,9 +83,9 @@
   </section>
   <div id="w-node-b6a7ab0e-34b4-7f7f-8d89-6cf89498a055-52bf9902" class="w-layout-layout work-grid filter wf-layout-layout">
     <div class="w-layout-cell cell">
-      <a href="project/ghd-partners-website.html" class="link-block w-inline-block"><img src="images/ghd-grid.gif" loading="lazy" alt="" class="home-img">
-        <h4 class="project-grid-h1">Design Studio Website</h4>
-        <div class="detail">ghd partners</div>
+      <a href="project/clearbridge-stewardship-report-microsite.html" class="link-block w-inline-block"><img loading="lazy" src="images/clearbridge-thumbnail.gif" alt="" class="home-img">
+        <h4 class="project-grid-h1">Stewardship 2023 Annual Report</h4>
+        <div class="detail">Clearbridge investments</div>
       </a>
     </div>
     <div class="w-layout-cell cell">
@@ -95,9 +95,9 @@
       </a>
     </div>
     <div class="w-layout-cell cell">
-      <a href="project/international-holocaust-remembrance-alliance.html" class="link-block w-inline-block"><img src="images/IHRA.png" loading="lazy" sizes="(max-width: 1776px) 100vw, 1776px" srcset="images/IHRA-p-500.png 500w, images/IHRA-p-800.png 800w, images/IHRA-p-1080.png 1080w, images/IHRA-p-1600.png 1600w, images/IHRA.png 1776w" alt="" class="home-img">
-        <h4 class="project-grid-h1">Social Media, Print and Microsite Campaign to Counter Holocaust Distortion</h4>
-        <div class="detail"> ihra</div>
+      <a href="project/ghd-partners-website.html" class="link-block w-inline-block"><img src="images/ghd-grid.gif" loading="lazy" alt="" class="home-img">
+        <h4 class="project-grid-h1">Design Studio Website</h4>
+        <div class="detail">ghd partners</div>
       </a>
     </div>
     <div class="w-layout-cell cell">
@@ -143,9 +143,9 @@
       </a>
     </div>
     <div class="w-layout-cell">
-      <a href="project/chrome-showcase.html" class="link-block w-inline-block"><img src="images/Google-Chrome-Showcase.png" loading="lazy" sizes="(max-width: 1776px) 100vw, 1776px" srcset="images/Google-Chrome-Showcase-p-500.png 500w, images/Google-Chrome-Showcase-p-800.png 800w, images/Google-Chrome-Showcase-p-1080.png 1080w, images/Google-Chrome-Showcase-p-1600.png 1600w, images/Google-Chrome-Showcase.png 1776w" alt="" class="home-img">
-        <h4 class="project-grid-h1">Designing Contexts to Showcase Technology Applications</h4>
-        <div class="detail">google chrome</div>
+      <a href="project/international-holocaust-remembrance-alliance.html" class="link-block w-inline-block"><img src="images/IHRA.png" loading="lazy" sizes="(max-width: 1776px) 100vw, 1776px" srcset="images/IHRA-p-500.png 500w, images/IHRA-p-800.png 800w, images/IHRA-p-1080.png 1080w, images/IHRA-p-1600.png 1600w, images/IHRA.png 1776w" alt="" class="home-img">
+        <h4 class="project-grid-h1">Social Media, Print and Microsite Campaign to Counter Holocaust Distortion</h4>
+        <div class="detail"> ihra</div>
       </a>
     </div>
     <div class="w-layout-cell">
