--- a/project/chrome-showcase.html
+++ b/project/chrome-showcase.html
@@ -1,4 +1,4 @@
-<!DOCTYPE html><!--  This site was created in Webflow. https://webflow.com  --><!--  Last Published: Thu May 15 2025 03:32:08 GMT+0000 (Coordinated Universal Time)  -->
+<!DOCTYPE html><!--  This site was created in Webflow. https://webflow.com  --><!--  Last Published: Tue May 20 2025 22:12:52 GMT+0000 (Coordinated Universal Time)  -->
 <html data-wf-page="66844dd300a56f48f2b91abe" data-wf-site="61d38d1ee8e6e2da8cbf9901">
 <head>
   <meta charset="utf-8">
@@ -46,6 +46,10 @@
         <a data-w-id="3816079e-a4a8-0d21-c7f2-19e337df5b18" href="../project/barbershop-books.html" class="menu-item w-inline-block">
           <div class="oval-wrapper no-hover"></div>
           <div class="menu-item-project-title">Barbershop Books </div>
+        </a>
+        <a href="../project/clearbridge-stewardship-report-microsite.html" class="menu-item w-inline-block">
+          <div class="oval-wrapper no-hover"></div>
+          <div class="menu-item-project-title">Clearbridge Report</div>
         </a>
         <a data-w-id="19613e81-38cd-b494-68fa-e168c27d5962" href="../project/equimundo.html" class="menu-item w-inline-block">
           <div class="oval-wrapper no-hover"></div>
@@ -155,16 +159,16 @@
       </div>
       <p class="body-regular">As a designer at GHD Partners, I worked with my team to create environmental graphics for the Google Chrome Showcase in San Jose, California. The space is divided into “vignettes” designed to display the client’s products and solutions in the context of the following four domains: technology, education, retail, and healthcare. My role in the project involved creating graphical concepts, sourcing found objects, and production design.<br></p>
     </div>
-    <div class="image-block-wrapper"><img src="../images/chrome-showcase-01.png" loading="lazy" sizes="100vw" srcset="../images/chrome-showcase-01-p-500.png 500w, ../images/chrome-showcase-01-p-800.png 800w, ../images/chrome-showcase-01.png 1045w" alt="" class="image">
+    <div class="image-block-wrapper"><img src="../images/chrome-showcase-01.png" loading="lazy" sizes="(max-width: 1045px) 100vw, 1045px" srcset="../images/chrome-showcase-01-p-500.png 500w, ../images/chrome-showcase-01-p-800.png 800w, ../images/chrome-showcase-01.png 1045w" alt="" class="image">
       <div class="detail caption">The technology graphic features a grid of line work to highlight connectivity.</div>
     </div>
-    <div class="image-block-wrapper"><img src="../images/chrome-showcase-02.png" loading="lazy" sizes="100vw" srcset="../images/chrome-showcase-02-p-500.png 500w, ../images/chrome-showcase-02-p-800.png 800w, ../images/chrome-showcase-02.png 1045w" alt="" class="image">
+    <div class="image-block-wrapper"><img src="../images/chrome-showcase-02.png" loading="lazy" sizes="(max-width: 1045px) 100vw, 1045px" srcset="../images/chrome-showcase-02-p-500.png 500w, ../images/chrome-showcase-02-p-800.png 800w, ../images/chrome-showcase-02.png 1045w" alt="" class="image">
       <div class="detail caption">In the retail corner, found objects are painted white in order to become background elements, allowing the technology to be highlighted.</div>
     </div>
-    <div class="image-block-wrapper"><img src="../images/chrome-showcase-03.png" loading="lazy" sizes="100vw" srcset="../images/chrome-showcase-03-p-500.png 500w, ../images/chrome-showcase-03-p-800.png 800w, ../images/chrome-showcase-03.png 1045w" alt="" class="image">
+    <div class="image-block-wrapper"><img src="../images/chrome-showcase-03.png" loading="lazy" sizes="(max-width: 1045px) 100vw, 1045px" srcset="../images/chrome-showcase-03-p-500.png 500w, ../images/chrome-showcase-03-p-800.png 800w, ../images/chrome-showcase-03.png 1045w" alt="" class="image">
       <div class="detail caption">in the education space, we incorporated a fun custom built abacus element and curved shelves filled with green markers that spell out  ‘chrome’.</div>
     </div>
-    <div class="image-block-wrapper"><img src="../images/chrome-showcase-04.png" loading="lazy" sizes="100vw" srcset="../images/chrome-showcase-04-p-500.png 500w, ../images/chrome-showcase-04-p-800.png 800w, ../images/chrome-showcase-04.png 1045w" alt="" class="image">
+    <div class="image-block-wrapper"><img src="../images/chrome-showcase-04.png" loading="lazy" sizes="(max-width: 1045px) 100vw, 1045px" srcset="../images/chrome-showcase-04-p-500.png 500w, ../images/chrome-showcase-04-p-800.png 800w, ../images/chrome-showcase-04.png 1045w" alt="" class="image">
       <div class="detail caption">in the health vignette, we extended the visual language of health charts and biology onto the walls and cabinets.</div>
     </div>
     <div class="text-block-wrapper no-indent page-end">
